<resources>
  <string name="appName" translatable="false">Ledger</string>
  <string name="appName_debug" translatable="false">Ledger (Debug)</string>
  <string name="appName_qa" translatable="false">Ledger (QA)</string>
  <string name="enum_queueSort_customerName">Customer name</string>
  <string name="enum_queueSort_date">Date</string>
  <string name="enum_queueSort_totalPrice">Total price</string>
  <string name="enum_customerSort_name">Name</string>
  <string name="enum_customerSort_balance">Balance</string>
  <string name="enum_productSort_name">Name</string>
  <string name="enum_productSort_price">Price</string>
  <string name="enum_queueDate_allTime">All time</string>
  <string name="enum_queueDate_today">Today</string>
  <string name="enum_queueDate_yesterday">Yesterday</string>
  <string name="enum_queueDate_thisWeek">This week</string>
  <string name="enum_queueDate_thisMonth">This month</string>
  <string name="enum_queueDate_thisYear">This year</string>
  <string name="enum_queueDate_custom" translatable="false">%s — %s</string>
  <string name="enum_queueStatus_inQueue">In queue</string>
  <string name="enum_queueStatus_inProcess">In process</string>
  <string name="enum_queueStatus_unpaid">Unpaid</string>
  <string name="enum_queueStatus_completed">Completed</string>
  <string name="enum_queuePaymentMethod_cash">Cash</string>
  <string name="enum_queuePaymentMethod_accountBalance">Account balance</string>
  <string name="enum_appTheme_light">Light</string>
  <string name="enum_appTheme_dark">Dark</string>
  <string name="enum_appTheme_followSystem">Follow system</string>
  <string name="enum_languageOption_englishUs" translatable="false">English (US)</string>
  <string name="enum_languageOption_englishUs_shortDateFormat" translatable="false">MMM d, yyyy</string>
  <string name="enum_languageOption_englishUs_fullDateFormat" translatable="false">EEEE, MMMM d, yyyy</string>
  <string name="enum_languageOption_englishUs_detailedDateFormat" translatable="false">EEEE, MMMM d, yyyy h:mm:ss a</string>
  <string name="enum_languageOption_indonesia" translatable="false">Indonesia</string>
  <string name="enum_languageOption_indonesia_shortDateFormat" translatable="false">d MMM yyyy</string>
  <string name="enum_languageOption_indonesia_fullDateFormat" translatable="false">EEEE, d MMMM yyyy</string>
  <string name="enum_languageOption_indonesia_detailedDateFormat" translatable="false">EEEE, d MMMM yyyy HH.mm.ss</string>
  <string name="action_add">Add</string>
  <string name="action_cancel">Cancel</string>
  <string name="action_delete">Delete</string>
  <string name="action_deny">Deny</string>
  <string name="action_denyAndQuit">Deny and quit</string>
  <string name="action_edit">Edit</string>
  <string name="action_grant">Grant</string>
  <string name="action_ignore">Ignore</string>
  <string name="action_leaveWithoutSaving">Leave without saving</string>
  <string name="action_new">New</string>
  <string name="action_ok">Ok</string>
  <string name="action_save">Save</string>
  <string name="action_update">Update</string>
  <string name="action_withdraw">Withdraw</string>
  <string name="symbol_notAvailable">n/a</string>
  <string name="symbol_mDash" translatable="false">—</string>
  <string name="symbol_thousand">K</string>
  <string name="symbol_million">M</string>
  <string name="symbol_billion">B</string>
  <string name="symbol_trillion">T</string>
  <string name="main_storageAccessPermission"><![CDATA[<b>Storage access permission required</b>]]></string>
  <string name="main_storageAccessPermission_description">
    <![CDATA[
      This permission is required to allow the app to retain all data, even after uninstallation.
      The data is stored in: <tt>/storage/emulated/0/Documents/.ledger/</tt>
    ]]>
  </string>
  <string name="main_unknownSourceInstallationPermission">
    <![CDATA[<b>Unknown source installation permission required</b>]]>
  </string>
  <string name="main_unknownSourceInstallationPermission_description">
    This permission is required to allow the app to install the update when a new version is
    available on GitHub.
  </string>
  <string name="main_navigation_dashboard">Dashboard</string>
  <string name="main_navigation_queue">Queue</string>
  <string name="main_navigation_customer">Customer</string>
  <string name="main_navigation_product">Product</string>
  <string name="main_createNew">Create new</string>
  <string name="main_createNew_queue">Queue</string>
  <string name="main_createNew_customer">Customer</string>
  <string name="main_createNew_product">Product</string>
  <string name="settings">Settings</string>
  <string name="settings_theme">Theme</string>
  <string name="settings_selectAppTheme">Select app theme</string>
  <string name="settings_language">Language</string>
  <string name="settings_selectLanguage">Select language</string>
  <string name="settings_selectLanguage_description">Changing language may also change the currency
    format. It\'s best to stick with the language you\'re currently using.
  </string>
  <string name="settings_checkForAppUpdate">Check for app update</string>
  <string name="settings_lastChecked_x">Last checked at %s</string>
  <string name="settings_updateAvailable_x"><![CDATA[<b>Update available: %s</b>]]></string>
  <string name="settings_updateAvailable_description">
    <![CDATA[
      Updated on %s. See what\'s new <a href="https://github.com/robifr/ledger/releases/latest">here</a>.<br>
      Size: %.2f MB
    ]]>
  </string>
  <string name="settings_aboutApp">About Ledger</string>
  <string name="settings_aboutApp_description">Details about the application and its licenses</string>
  <string name="settings_noUpdatesWereAvailable">No updates were available</string>
  <string name="settings_noInternetConnectionForAppUpdates">No internet connection, unable to check for app updates</string>
  <string name="dashboard_date_selectDate">Select date</string>
  <string name="dashboard_date_selectDateRange">Select date range</string>
  <string name="dashboard_date_customRange">Custom range</string>
  <string name="dashboard_summary">Summary</string>
  <string name="dashboard_totalQueues">Total queues</string>
  <string name="dashboard_uncompletedQueues">Uncompleted queues</string>
  <string name="dashboard_uncompletedQueues_oldestQueue_x">
    <![CDATA[
      <text>
        <tspan x=\"0\" dy=\"-0.5em\" style=\"font-size: %d;\">Oldest queue:</tspan>
        <tspan x=\"0\" dy=\"1.2em\" style=\"font-size: %d; \"font-weight: bold;\">%s</tspan>
      </text>
    ]]>
  </string>
  <string name="dashboard_activeCustomers">Active customers</string>
  <plurals name="dashboard_activeCustomers_n_queue">
    <item quantity="one"><![CDATA[<b>%d</b> queue]]></item>
    <item quantity="other"><![CDATA[<b>%d</b> queues]]></item>
  </plurals>
  <string name="dashboard_productsSold">Products sold</string>
  <string name="dashboard_productsSold_n" translatable="false"><![CDATA[<b>%s</b>]]></string>
  <string name="dashboard_revenue">Revenue</string>
  <string name="dashboard_receivedIncome">Received income</string>
  <string name="dashboard_receivedIncome_description">From completed queues</string>
  <string name="dashboard_projectedIncome">Projected income</string>
  <string name="dashboard_projectedIncome_description">From any queues</string>
  <string name="dashboard_balance">Balance</string>
  <plurals name="dashboard_balance_from_n_customer">
    <item quantity="one"><![CDATA[From <b>%d</b> customer]]></item>
    <item quantity="other"><![CDATA[From <b>%d</b> customers]]></item>
  </plurals>
  <string name="dashboard_totalBalance">Total balance</string>
  <string name="dashboard_totalDebt">Total debt</string>
  <plurals name="queue_displaying_n_queue">
    <item quantity="one"><![CDATA[Displaying <b>%d</b> queue]]></item>
    <item quantity="other"><![CDATA[Displaying <b>%d</b> queues]]></item>
  </plurals>
  <string name="queue_noQueuesCreated">No queues created</string>
  <string name="queue_noQueuesCreated_description">Create a queue to manage orders</string>
  <string name="queue_sortBy">Sort by</string>
  <string name="queue_filters">Filters</string>
  <string name="queue_filters_min">Min</string>
  <string name="queue_filters_max">Max</string>
  <string name="queue_filterCustomer">Customer</string>
  <string name="queue_filterCustomer_showQueueWithNoCustomer">Show queue with no customer</string>
  <string name="queue_filterCustomer_filterCustomers">Filter customers</string>
  <string name="queue_filterDate">Date</string>
  <string name="queue_filterDate_customRange">Custom range</string>
  <string name="queue_filterDate_selectDateRange">Select date range</string>
  <string name="queue_filterStatus">Status</string>
  <string name="queue_filterTotalPrice">Total price</string>
  <string name="queue_card_customer">Customer</string>
  <string name="queue_card_queueId">Queue ID</string>
  <string name="queue_card_date">Date</string>
  <string name="queue_card_status">Status</string>
  <string name="queue_card_paymentMethod">Payment method</string>
  <string name="queue_card_productOrders_product">Product</string>
  <string name="queue_card_productOrders_quantity">Quantity</string>
  <string name="queue_card_productOrders_totalPrice">Total price</string>
  <string name="queue_card_productOrders_n_off" translatable="false">@string/createQueue_productOrders_n_off</string>
  <string name="queue_card_grandTotalPrice" translatable="false">@string/createQueue_productOrders_grandTotalPrice</string>
  <string name="queue_card_totalDiscount" translatable="false">@string/createQueue_productOrders_totalDiscount</string>
  <string name="queue_card_x_balance" translatable="false">@string/createQueue_productOrders_x_balance</string>
  <string name="queue_card_x_debt" translatable="false">@string/createQueue_productOrders_x_debt</string>
  <string name="queue_card_note">Note</string>
  <string name="queue_cardMenu_edit" translatable="false">@string/action_edit</string>
  <string name="queue_cardMenu_delete" translatable="false">@string/action_delete</string>
  <string name="queue_cardMenu_deleteWarning"><![CDATA[<b>Delete queue?</b>]]></string>
  <string name="queue_cardMenu_deleteWarning_description">
    <![CDATA[
      Queue with ID \"%s\" will be permanently deleted and can\'t be recovered.
      All related data will also be removed.
    ]]>
  </string>
  <string name="queue_deleteQueueError">Error! Failed to delete queue</string>
  <plurals name="queue_deleted_n_queue">
    <item quantity="one">Deleted %d queue</item>
    <item quantity="other">Deleted %d queues</item>
  </plurals>
  <plurals name="customer_displaying_n_customer">
    <item quantity="one"><![CDATA[Displaying <b>%d</b> customer]]></item>
    <item quantity="other"><![CDATA[Displaying <b>%d</b> customers]]></item>
  </plurals>
  <string name="customer_noCustomersAdded">No customers added</string>
  <string name="customer_noCustomersAdded_description">Add a customer to keep track of clients</string>
  <string name="customer_sortBy" translatable="false">@string/queue_sortBy</string>
  <string name="about">About</string>
  <string name="about_info">Info</string>
  <string name="about_info_description"><![CDATA[Version %s<br>Updated at %s]]></string>
  <string name="about_license">License</string>
  <string name="about_license_description">Ledger is open-source software and distributed under the
    terms of the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.
    The source code is available on <a href="https://github.com/robifr/ledger">GitHub</a>.
    \n\nCopyright © 2024–2025 Robi.
  </string>
  <string name="about_thirdPartyLicenses">Third-party licenses</string>
  <string name="about_thirdPartyLicenses_description">Ledger also uses open-source libraries.
    <a href="licenses">Learn more about their licenses</a>.
  </string>
  <string name="about_viewSourceCode">View source code</string>
</resources>