<?xml version="1.0" encoding="utf-8"?><!--
 ~ Copyright 2024 Robi
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~     http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/space_large">

  <com.google.android.material.bottomsheet.BottomSheetDragHandleView
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  <TextView
      android:id="@+id/title"
      style="@style/BottomSheetDialog.Title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/settings_selectAppTheme" />

  <com.google.android.material.divider.MaterialDivider
      style="@style/Divider"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  <RadioGroup
      android:id="@+id/radioGroup"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingEnd="@dimen/space_medium">

    <!-- Radio buttons tag are based on `AppTheme` enum. -->
    <RadioButton
        android:id="@+id/lightRadioButton"
        style="@style/BottomSheetDialog.RadioButton.RoundedRight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="LIGHT"
        android:text="@string/enum_appTheme_light" />

    <RadioButton
        android:id="@+id/darkRadioButton"
        style="@style/BottomSheetDialog.RadioButton.RoundedRight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="DARK"
        android:text="@string/enum_appTheme_dark" />

    <RadioButton
        android:id="@+id/followSystemRadioButton"
        style="@style/BottomSheetDialog.RadioButton.RoundedRight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="FOLLOW_SYSTEM"
        android:text="@string/enum_appTheme_followSystem" />
  </RadioGroup>
</LinearLayout>
