<?xml version="1.0" encoding="utf-8"?><!--
 ~ Copyright 2025 Robi
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~     http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?android:colorBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorBackground"
        app:navigationIcon="@drawable/icon_arrow_back"
        app:title="@string/about" />
  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_extraLarge">

      <ImageView
          android:id="@+id/appIcon"
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:layout_marginTop="@dimen/space_mediumLarge"
          android:src="@drawable/icon_app_foreground_noborder"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/appName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/space_smallMedium"
          android:text="@string/appName"
          android:textSize="@dimen/text_large"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/appIcon" />

      <TextView
          android:id="@+id/infoTitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/space_medium"
          android:paddingStart="@dimen/space_medium"
          android:paddingTop="@dimen/space_medium"
          android:text="@string/about_info"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/appName" />

      <TextView
          android:id="@+id/info"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/space_tiny"
          android:paddingStart="@dimen/space_medium"
          android:paddingEnd="@dimen/space_medium"
          android:paddingBottom="@dimen/space_medium"
          android:text="@string/about_info_description"
          android:textColor="?colorOnSurfaceVariant"
          android:textSize="@dimen/text_small"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/infoTitle" />

      <TextView
          android:id="@+id/licenseTitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingStart="@dimen/space_medium"
          android:paddingTop="@dimen/space_medium"
          android:text="@string/about_license"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/info" />

      <TextView
          android:id="@+id/license"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/space_tiny"
          android:paddingStart="@dimen/space_medium"
          android:paddingEnd="@dimen/space_medium"
          android:paddingBottom="@dimen/space_medium"
          android:text="@string/about_license_description"
          android:textColor="?colorOnSurfaceVariant"
          android:textSize="@dimen/text_small"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/licenseTitle" />


      <TextView
          android:id="@+id/thirdPartyLicensesTitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingStart="@dimen/space_medium"
          android:paddingTop="@dimen/space_medium"
          android:text="@string/about_thirdPartyLicenses"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/license" />

      <TextView
          android:id="@+id/thirdPartyLicenses"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/space_tiny"
          android:paddingStart="@dimen/space_medium"
          android:paddingEnd="@dimen/space_medium"
          android:paddingBottom="@dimen/space_medium"
          android:text="@string/about_thirdPartyLicenses_description"
          android:textColor="?colorOnSurfaceVariant"
          android:textSize="@dimen/text_small"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/thirdPartyLicensesTitle" />


      <com.google.android.material.button.MaterialButton
          android:id="@+id/viewSourceCodeButton"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/space_medium"
          android:layout_marginTop="@dimen/space_mediumLarge"
          android:layout_marginEnd="@dimen/space_medium"
          android:minHeight="@dimen/space_large"
          android:padding="@dimen/space_smallMedium"
          android:text="@string/about_viewSourceCode"
          android:textColor="?colorOnSecondary"
          app:backgroundTint="?colorSecondary"
          app:icon="@drawable/icon_github"
          app:iconGravity="textStart"
          app:iconPadding="@dimen/space_medium"
          app:iconSize="@dimen/icon_large"
          app:iconTint="?colorOnSecondary"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/thirdPartyLicenses"
          app:rippleColor="@color/secondary_ripple" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>
</LinearLayout>
