<?xml version="1.0" encoding="utf-8"?><!--
 ~ Copyright 2024 Robi
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~     http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?android:colorBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="enterAlways"
        app:navigationIcon="@drawable/icon_arrow_back"
        app:title="@string/settings" />
  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_extraLarge">

      <androidx.constraintlayout.helper.widget.Layer
          android:id="@+id/languageLayer"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="?selectableItemBackground"
          android:clickable="true"
          app:constraint_referenced_ids="languageTitle,language"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/languageTitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingStart="@dimen/space_medium"
          android:paddingTop="@dimen/space_medium"
          android:text="@string/settings_language"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/language"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/space_tiny"
          android:paddingStart="@dimen/space_medium"
          android:paddingBottom="@dimen/space_medium"
          android:text="@string/enum_languageOption_englishUs"
          android:textColor="?colorOnSurfaceVariant"
          android:textSize="@dimen/text_small"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/languageTitle" />

      <androidx.constraintlayout.helper.widget.Layer
          android:id="@+id/appUpdateLayer"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="?selectableItemBackground"
          android:clickable="true"
          app:constraint_referenced_ids="appUpdateTitle,appUpdateLastChecked,appUpdateIcon"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/languageLayer" />

      <TextView
          android:id="@+id/appUpdateTitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingStart="@dimen/space_medium"
          android:paddingTop="@dimen/space_medium"
          android:text="@string/settings_checkForAppUpdate"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/language" />

      <TextView
          android:id="@+id/appUpdateLastChecked"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/space_tiny"
          android:paddingStart="@dimen/space_medium"
          android:paddingBottom="@dimen/space_medium"
          android:text="@string/settings_lastChecked_x"
          android:textColor="?colorOnSurfaceVariant"
          android:textSize="@dimen/text_small"
          app:layout_constraintEnd_toStartOf="@id/appUpdateIcon"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/appUpdateTitle" />

      <TextView
          android:id="@+id/appUpdateIcon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawableStart="@drawable/icon_cached"
          android:padding="@dimen/space_medium"
          app:layout_constraintBottom_toBottomOf="@id/appUpdateLastChecked"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="@id/appUpdateTitle" />

      <androidx.constraintlayout.helper.widget.Layer
          android:id="@+id/aboutAppLayer"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="?selectableItemBackground"
          android:clickable="true"
          app:constraint_referenced_ids="aboutAppTitle,aboutApp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/languageLayer" />

      <TextView
          android:id="@+id/aboutAppTitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingStart="@dimen/space_medium"
          android:paddingTop="@dimen/space_medium"
          android:text="@string/settings_aboutApp"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/appUpdateLastChecked" />

      <TextView
          android:id="@+id/aboutApp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/space_tiny"
          android:paddingStart="@dimen/space_medium"
          android:paddingBottom="@dimen/space_medium"
          android:text="@string/settings_aboutApp_description"
          android:textColor="?colorOnSurfaceVariant"
          android:textSize="@dimen/text_small"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/aboutAppTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>
</LinearLayout>