<?xml version="1.0" encoding="utf-8"?><!--
 ~ Copyright 2024 Robi
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~     http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeWidth="0dp">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:paddingStart="@dimen/space_smallMedium"
      android:paddingTop="@dimen/space_medium"
      android:paddingEnd="@dimen/space_smallMedium"
      android:paddingBottom="@dimen/space_medium">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_balance"
        android:textSize="@dimen/text_mediumLarge"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/totalBalanceTitleIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_smallMedium"
        android:src="@drawable/icon_account_wallet"
        app:layout_constraintBottom_toBottomOf="@id/totalCustomersWithBalanceTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/totalBalanceTitle" />

    <TextView
        android:id="@+id/totalBalanceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_medium"
        android:layout_marginTop="@dimen/space_medium"
        android:text="@string/dashboard_totalBalance"
        android:textSize="@dimen/text_small"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/totalBalanceTitleIcon"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/totalCustomersWithBalanceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@plurals/dashboard_balance_from_n_customer"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toStartOf="@id/totalBalanceTitle"
        app:layout_constraintTop_toBottomOf="@id/totalBalanceTitle" />

    <TextView
        android:id="@+id/totalBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_smallMedium"
        android:layout_marginBottom="@dimen/space_medium"
        android:textSize="@dimen/text_mediumLarge"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/dividerForTotalBalance"
        app:layout_constraintStart_toStartOf="@id/totalBalanceTitle"
        app:layout_constraintTop_toBottomOf="@id/totalCustomersWithBalanceTitle" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dividerForTotalBalance"
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/totalDebtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalBalance" />

    <ImageView
        android:id="@+id/totalDebtTitleIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_smallMedium"
        android:src="@drawable/icon_dollar_off"
        app:layout_constraintBottom_toBottomOf="@id/totalCustomersWithDebtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/totalDebtTitle" />

    <TextView
        android:id="@+id/totalDebtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_medium"
        android:layout_marginTop="@dimen/space_medium"
        android:text="@string/dashboard_totalDebt"
        android:textSize="@dimen/text_small"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/totalCustomersWithDebtTitle"
        app:layout_constraintStart_toEndOf="@id/totalDebtTitleIcon"
        app:layout_constraintTop_toBottomOf="@id/dividerForTotalBalance" />

    <TextView
        android:id="@+id/totalCustomersWithDebtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@plurals/dashboard_balance_from_n_customer"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toStartOf="@id/totalDebtTitle"
        app:layout_constraintTop_toBottomOf="@id/totalDebtTitle" />

    <TextView
        android:id="@+id/totalDebt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_smallMedium"
        android:textSize="@dimen/text_mediumLarge"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/totalDebtTitle"
        app:layout_constraintTop_toBottomOf="@id/totalCustomersWithDebtTitle" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
